# gbEmu

./: CMakeLists.txt  cmp.py  readme.txt
cmake/: FindSDL2_ttf.cmake
gbemu/: CMakeLists.txt  main.c
include/: cart  cart.h  common.h  cpu.h  debug.h  emu.h  instruction.h  io.h  ir.h  mem.h  ppu.h  serial.h  timer.h
lib/: CMakeLists.txt  cart.c  common.c  cpu.c  debug.c  emu.c  io.c  ir.c  mem.c  ppu.c  serial.c  timer.c
test/: CMakeLists.txt  test_gbe.c
